Github Pages 404 fix

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,17 @@
     />
 
     <title>VarWish</title>
+
+    <!-- Github Pages hack from https://evansalter.com/blog/github-pages-and-single-page-apps/ -->
+    <script>
+      (function() {
+        var redirect = sessionStorage.redirect;
+        delete sessionStorage.redirect;
+        if (redirect && redirect != location.href) {
+          history.replaceState(null, null, redirect);
+        }
+      })();
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
