Github Pages 404 fix fix

--- a/public/404.html
+++ b/public/404.html
@@ -10,7 +10,7 @@
     <script>
         sessionStorage.redirect = location.href;
     </script>
-    <meta http-equiv="refresh" content="0;URL='/'"></meta>
+    <meta http-equiv="refresh" content="0;URL='/varwish-fe/'"></meta>
 </head>
 <body>
     <h1>VarWish</h1>
